tests/baselines/reference/inheritanceStaticPropertyOverridingMethod.errors.txt
tests/cases/compiler/inheritanceStaticPropertyOverridingMethod.ts(7,7): error TS2417: Class static side '类为 b' incorrectly extends base class static side '类为 a'.
  Types of property 'x' are incompatible.
    Type '文字' is not assignable to type '() => 文字'.


==== tests/cases/compiler/inheritanceStaticPropertyOverridingMethod.ts (1 errors) ====
    class a {
        static x() {
            return "20";
        }
    }
    
    class b extends a {
          ~
!!! error TS2417: Class static side '类为 b' incorrectly extends base class static side '类为 a'.
!!! error TS2417:   Types of property 'x' are incompatible.
!!! error TS2417:     Type '文字' is not assignable to type '() => 文字'.
        static x: string;
    }